; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_javascript.c_script_get_property.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_javascript.c_script_get_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MPV_FORMAT_STRING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @script_get_property to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @script_get_property(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32* @jclient(i32* %8)
  store i32* %9, i32** %5, align 8
  store i8* null, i8** %6, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @js_tostring(i32* %11, i32 1)
  %13 = load i32, i32* @MPV_FORMAT_STRING, align 4
  %14 = call i32 @mpv_get_property(i32* %10, i32 %12, i32 %13, i8** %6)
  store i32 %14, i32* %7, align 4
  %15 = load i32, i32* %7, align 4
  %16 = icmp sge i32 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %2
  %18 = load i8*, i8** %4, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 @add_af_mpv_alloc(i8* %18, i8* %19)
  br label %21

21:                                               ; preds = %17, %2
  %22 = load i32*, i32** %3, align 8
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @pushed_error(i32* %22, i32 %23, i32 2)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %30, label %26

26:                                               ; preds = %21
  %27 = load i32*, i32** %3, align 8
  %28 = load i8*, i8** %6, align 8
  %29 = call i32 @js_pushstring(i32* %27, i8* %28)
  br label %30

30:                                               ; preds = %26, %21
  ret void
}

declare dso_local i32* @jclient(i32*) #1

declare dso_local i32 @mpv_get_property(i32*, i32, i32, i8**) #1

declare dso_local i32 @js_tostring(i32*, i32) #1

declare dso_local i32 @add_af_mpv_alloc(i8*, i8*) #1

declare dso_local i32 @pushed_error(i32*, i32, i32) #1

declare dso_local i32 @js_pushstring(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
